assets/main.scss
---
---
@import "_variables";

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
html,
body {
  font-family: $font-body;
  width: 100%;
  height: 100%;
  background-color: $light-grey;
  font-weight: 300;
  font-size: 19px;
}
.clearfix::after {
  content: "";
  clear: both;
  display: table;
}
img.lgbtq, img.poc {
  padding:  20px;
  float: left;
  width: 400px;
}
img.lgbtq.pride, img.lgbtq.beard, img.lgbtq.couple2 {
  float: right;
}
img.poc.woman, img.poc.face, img.poc.bw { 
  float: right;
   padding:  20px;
}
.wrapper {
  position: relative;
  min-height: 100vh;
}
.full-width-container {
  max-width: 100%;
}
.header {
  padding-top: 100px;
  text-align: center;
}
.info {
  padding-top: 20px;
  padding-bottom: 20px;
  text-align: left;
}
.inclusive {
  padding-bottom: 25px;
}
.page-header {
  font-family: $font-body;
  padding: 20px;
  text-align: center;
}
// secondary header
.page-header-2 {
  padding: 10px 10px 10px 0;
  font-family: $font-body;
  font-weight: bold;
}

/*  ------------------------------ Begin Navigation Bar-------------------------------*/
.bg-light {
  background-color: white !important;
}
nav.navbar {
  font-family: $font-body;
  text-transform: uppercase;
  font-size: 15px;
}
 div > a.navbar-brand, .navbar-light .navbar-brand {
  font-family: $font-header;
  text-transform: uppercase;
  font-size: 30px;
  transition: 0.3s;
  &:link { color: $maroon !important;}
  &:visited { color: $maroon !important;}
  &:focus { color: $maroon !important;}
  &:focus-visible { color: $maroon !important;}
  &:hover { color: rgb(204, 212, 217) !important;} 
}
.dropdown-menu.show {
  border: 0;
}
.dropdown-toggle::after {
  border: 0;
  margin: 0;
}
.navbar .dropdown-menu a {
  text-transform: uppercase;
  font-size: 15px !important;
}
#contact {
  color: $maroon;
  &:hover {color:black;}
}
/* ---------------------------Hero Image and Overlay---------------------------*/
.hero {
  position: relative;
  margin-left: -200;
  padding-top: 6rem;
  padding-bottom: 24rem;
  background: url("/assets/img/hero.jpg") no-repeat;
  background-size: cover;
  background-position: right bottom;
  height: 100vh;
}
.hero-overlay {
  top: 0;
  left:0;
  position: absolute;
  width: 50%;
  height: 100vh;
  background: linear-gradient(90deg, rgba(0,0,0,0.6015831134564644) 0%, rgba(253,29,29,0) 100%);
  // background: rgba(5, 5 ,5, 0.5);
  z-index: 1;
}
.hero-arrow {
  font-size: 35px;
  bottom: 20%;
  left: 50%;
  position: absolute;
  color: white;
  z-index: 100;
  animation: bounce .5s infinite alternate;
-webkit-animation: bounce .5s infinite alternate;
&:visited {
  color: white;
}
}
a.fas, .fa-arrow-circle-down {
  font-size: 30px;
}
.fas, .fab {
    padding-top: 10px;
    font-size: 20px;
    color: white;

    &:hover {
      color: $light-grey
    }
  }
  @keyframes bounce {
  from {
    transform: translateY(0px);
  }
  to {
    transform: translateY(-10px);
  }
}
@-webkit-keyframes bounce {
  from {
    transform: translateY(0px);
  }
  to {
    transform: translateY(-10px);
  }
}
.hero-text{
  padding-left: 25px;
  padding-top: 25%;
  position: relative;
  font-family: $font-overlay;
  color: white;
  z-index: 100;
  font-size: 5rem;
}
/*------------------------------Begin section styles-----------------------*/
div.section {
  margin: 0 auto;
}
div.section ul {
  padding-left: 25px !important;
}
.front-statement {
  max-width: 1000px;
  padding: 100px;
  font-size: 40px;
  text-align: center;
  background-color: $light-grey;
}
.divider {
  position: relative;
  padding-top: 6rem;
  padding-bottom: 24rem;
  background: url("/assets/img/family-sitting.jpg") no-repeat;
  background-size: cover;
  background-position: center 75%;
}
a#section-two-arrow {
  font-size: 25px;
  padding-top: 75px;
  color: $maroon;
  &:hover {
    color: white;
  }
}
.our-team {
  font-size: 18px;
}
.divider-2 {
  font-size: 20px;
  color: white;
  padding-top: 35px;
  background-color:rgba(1, 64, 64, .5);
  padding-bottom: 20px;
}
.office {
  background: url("/assets/img/DSC01882_crop-website-compressor-1.jpg") no-repeat;
  background-size: cover;
  background-position: center left;
}
.box-1 {
  background: url("/assets/img/group.jpg")top left no-repeat;
}
.box-2 {
  background: url("/assets/img/relationship.jpg")no-repeat;
  background-position: 25% 75%;
}
.box-3 {
  background: url("/assets/img/individuals.jpg") top left no-repeat;
  height: 200px;
  background-position: 25% 40%;
}
.box-4 {
  background: url("/assets/img/family.jpg") top left no-repeat;
  height: 200px;
  background-position: 25% 75%;
}
.box-5 {
  background: url("/assets/img/career.jpg") top left no-repeat;
  height: 200px;
  background-position: 25% 75%;
}
.box-6 {
  background: url("/assets/img/loss.jpg") top left no-repeat;
  height: 200px;
  background-position: 75% 75%;
}
.box-7 {
  background: url("/assets/img/pride.jpg") top left no-repeat;
  height: 200px;
  background-position: 70% 75%;
}
.box-8 {
  background: url("/assets/img/anxiety.jpg") top left no-repeat;
  height: 200px;
  background-position: 70% 50%;
}
.box-9 {
  background: url("/assets/img/immigration.jpg") top left no-repeat;
  height: 200px;
  background-position: 70% 50%;
}
.box-10 {
  background: url("/assets/img/poc.jpg") top left no-repeat;
  height: 200px;
  background-position: 70% 50%;
}
.box-11 {
  background: url("/assets/img/parenting.jpg") top left no-repeat;
  height: 200px;
  background-position: 70% 50%;
}
.box {
  border-radius: 50%;
  background-size: cover;
  width: 200px;
  height:200px;
}
#footer {
  text-align: center;
  bottom: 0;
  position: absolute;
  padding: 5px;
  background-color: $maroon;
  color: white;
}
#credit, a:visited {
  color: white;
}
#credit {
  font-size: 12px;
  color: white;
  padding-left: 5px;
}
#supervision {
  padding-bottom: 50px;
}
.divider-supervision {
  position: relative;
  padding-top: 6rem;
  padding-bottom: 24rem;
  background: url("/assets/img/trees.jpg") no-repeat;
  background-size: cover;
  background-position: center bottom;
}
#services {
  padding-top: 20px;
  padding-bottom: 40px;
}
.service-img {
  border-radius: 50%;
}
.menu-container {
  position: relative;
}
#mdc-button-specialty:not(:disabled) {
  font-size: 15px;
  margin-bottom: 20px;
}
.mdc-list-item {
  padding: 5px;
  color: black;
  &:hover {
    color: $maroon;
  }
}
.contact {
  text-align: center;
}
#contact-page-header {
  padding-top: 100px;
  justify-content: center;
}
/* -------------------------Begin About Page Styles-------------------------------------------*/
span > a  {
  color: $maroon;
  &:visited {
      color: $maroon;}
  &:hover {
      color: $light-grey;}
}
.owner {
  font-size: 20px;
}
#sub-title {
  padding-right: 30px;
  font-size: 18px;
  text-align: right;
}
div.mdc-card__media {
  background-position: top;
}
.sary {
  background-image: url("/assets/img/headshots/Sary-1.jpg")
}
.nisreen {
  background-image: url("/assets/img/headshots/Nisreen-1.jpg")
}
.taylor {
  background-image: url("/assets/img/headshots/Taylor-1.jpg");
}
.cassandra {
  background-image: url("/assets/img/headshots/Cassandra-1.jpg")
}
.laura {
  background-image: url("/assets/img/headshots/Laura-1.jpg")
}
.team {
  padding-left: 0;
  padding-right: 0;
}
.headshot {
  max-height: 500px;
}
.mdc-card {
  margin: 20px;
  min-width: 350px;
}
.card-body {
  padding-top: 5px;
  padding-bottom: 5px;
}
.media-link {
  position:absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}
.my-card-title {
  padding-top: 2px;
  margin: .25rem 0 1px 1.25rem;
  color: white;
  font-size: 25px;
  text-align: center;
  background-color: rgba(115, 38, 38, 0.8);
}
.mdc-button:not(:disabled), .mdc-button--outlined:not(:disabled) {
  border-color: transparent;
  color: white;
  background-color: $maroon;
  margin: 5px;
  height: 50px;
}
.caption-btn {
  padding: 10px 10px 10px 0;
}
.fa-arrow-left, .back {
  color: black;
  font-weight: bold;
  &:hover {
    color: $maroon;}
  &:visited {
    color: black;
  }
}
#contact-list {
  color: white;
  &:hover {
      color:black;}
  &:visited {
      color: white;}
}

.employee-headshot {
  text-align: center !important;
}
/* ------------------Begin Contact Form-----------------------------------------*/
p.email-list a {
  font-weight: 400;
  color: $maroon;
  transition: ease-in-out .2s;
  &:hover { color: black; }
}
iframe {
   position: relative;
   width: 100%;
   height: 400px;
 }
 i.fas.fa-envelope:hover {
   color: white;

 }

/*------------------------------------------
  Responsive Grid Media Queries - 1280, 1024, 768, 480
   1280-1024   - desktop (default grid)
   1024-768    - tablet landscape
   768-480     - tablet
   480-less    - phone landscape & smaller
--------------------------------------------*/
@media all and (min-width: 1024px) and (max-width: 1980px) {

}
@media all and (min-width: 768px) and (max-width: 1024px) {
.navbar-light .navbar-brand {
    font-size: 20px;
    padding-left: 10px;
  }
.navbar ul a {
  font-size: 14px;
  padding-left: 5px;
  padding-right: 10px;
}
 }
@media all and (min-width: 480px) and (max-width: 768px) {
}
@media all and (max-width: 480px) {
  form {
    width: auto;
  }
  div.section {
    display: grid;
    justify-content: center;
  }
  img.poc, img.lgbtq {
    float: none;
    width: 350px;
  }
  #footer {
    font-size: 12px;
  }
  .navbar-light .navbar-brand {
    font-size: 20px;
    text-align: center;
  }
  .hero {
    background-position: -425px;
  }
  .hero-text {
    padding-top: 15px;
    font-size: 3rem;
  }
  .hero-overlay {
    width: 100%;
   background: rgba(5, 5 ,5, 0.5);

  }
  .front-statement {
    padding-left: 10px;
    padding-right: 10px;
    font-size: 25px;
  }
  .page-header {
    font-weight: bold;
    padding: 5px;
    font-size: 30px;
  }
  .page-header-2 {
    text-align: center;
    padding-top: 50px;
  }
  .divider-2 {
    font-size: 15px;
  }
  .office {
    background-position: -50px;
    height: 600px;
  }
  .contact {
    text-align: left;
    padding-left: 20px;
  }
  .mdc-menu .mdc-menu-surface {
    left: -75px !important;
  }
}

